--- a/views/software/software_list.ejs
+++ b/views/software/software_list.ejs
@@ -1,5 +1,5 @@
 <%- include('../partials/header.ejs') %>
-<div class="d-flex flex-wrap gap-3 m-5">
+<div class="d-flex flex-wrap justify-content-center gap-3 m-5">
     <% softwares.forEach(software => { %>
         <div class="card" style="width: 18rem;">
             <a href="<%= software.external_resources.website %>" target="_blank" rel="noreferrer">
@@ -28,5 +28,20 @@
             </div>
           </div>
     <% }) %>
+</div>
+<div class="d-flex justify-content-center">
+  <nav aria-label="Page navigation example">
+    <ul class="pagination">
+      <li class="page-item">
+        <a class="page-link" href="#" aria-label="Previous">
+          <span aria-hidden="true">&laquo;</span>
+        </a>
+      </li>
+      <li class="page-item"><a class="page-link" href="#">1</a></li>
+      <li class="page-item"><a class="page-link" href="#">2</a></li>
+      <li class="page-item"><a class="page-link" href="#">3</a></li>
+      <li class="page-item"><a class="page-link" href="#"><%= total %></a></li>
+    </ul>
+  </nav>
 </div>
 <%- include('../partials/footer.ejs') %>
