feat: :lock: logo

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,7 +10,8 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
+            <div class="container-fluid gap-3">
+              <img src="https://cdn3.emoji.gg/emojis/5844-boykisser.png" width="45" >
               <a class="navbar-brand" href="#">UwU Libresoft</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
