--- a/views/software/software_list.ejs
+++ b/views/software/software_list.ejs
@@ -32,15 +32,15 @@
 <div class="d-flex justify-content-center">
   <nav aria-label="Page navigation example">
     <ul class="pagination">
-      <li class="page-item">
-        <a class="page-link" href="#" aria-label="Previous">
-          <span aria-hidden="true">&laquo;</span>
-        </a>
-      </li>
-      <li class="page-item"><a class="page-link" href="#">1</a></li>
-      <li class="page-item"><a class="page-link" href="#">2</a></li>
-      <li class="page-item"><a class="page-link" href="#">3</a></li>
-      <li class="page-item"><a class="page-link" href="#"><%= total %></a></li>
+      <% if (current_page != 1) { %>
+        <li class="page-item"><a class="page-link" href="/?page=1">1</a></li>
+        <li class="page-item"><a class="page-link" href="/?page=<%= Number(current_page) - 1 %>">🠔</a></li>
+      <% } %>
+      <li class="page-item active"><a class="page-link" href="/?page=<%= current_page %>"><%= current_page %></a></li>
+      <% if (current_page != total) { %>
+        <li class="page-item"><a class="page-link" href="/?page=<%= Number(current_page) + 1 %>">➞</a></li>
+        <li class="page-item"><a class="page-link" href="/?page=<%= total %>"><%= total %></a></li>
+      <% } %>
     </ul>
   </nav>
 </div>
