--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,13 +6,21 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UwU Libresoft</title>
+
+    <script>
+      function search(e) {
+        e.preventDefault();
+        const search = new FormData(e.target).get('search');
+        window.location.href = `/?search=${search}`;
+      }
+    </script>
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid gap-3">
               <img src="https://cdn3.emoji.gg/emojis/5844-boykisser.png" width="45" >
-              <a class="navbar-brand" href="#">UwU Libresoft</a>
+              <a class="navbar-brand" href="/">UwU Libresoft</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -23,6 +31,10 @@
                   </li>
                 </ul>
               </div>
+              <form class="d-flex" role="search" onsubmit="search">
+                <input class="form-control me-2" type="search" placeholder="Search" name="search" aria-label="Search" minlength="3" value="<%= typeof search !== 'undefined' ? search : '' %>">
+                <button class="btn btn-outline-success" type="submit">Rechercher</button>
+              </form>
             </div>
           </nav>
     </header>
