--- a/views/software/software_list.ejs
+++ b/views/software/software_list.ejs
@@ -22,7 +22,7 @@
                   <a class="btn btn-outline-primary" href="<%= software.external_resources.framalibre.url %>" rel="noreferrer" target="_blank"><img src="/images/sites/framalibre.png" alt="framalibre" /></a>
                 <% } %>
                 <% if (software.usersCount > 0) { %>
-                  <a class="btn btn-primary d-flex gap-2 align-items-center" href="#"><img src="/images/user.png" alt="cdl" /> <%= software.usersCount %></a>
+                  <a class="btn btn-primary d-flex gap-2 align-items-center" href="/users/<%= software.id%>"><img src="/images/user.png" alt="cdl" /> <%= software.usersCount %></a>
                 <% } %>
                 </div>
             </div>
