--- a/views/users/users_list.ejs
+++ b/views/users/users_list.ejs
@@ -1,10 +1,13 @@
 <%- include('../partials/header.ejs') %>
     <div>
+        <% if (software !== null) { %>
+         
+        
         <div class="w-100 bg-primary p-3">
             <h4 class="text-white"><a href="/" class="text-white text-decoration-none">🠔</a><span
                     class="m-3">Utilisateurs de <%= software.name %></span></h4>
         </div>
-        <div class="d-flex justify-content-center m-4 flex-wrap">
+        <div class="d-flex justify-content-center m-4 flex-wrap gap-3">
             <% software.users.forEach(user => { %>
                 <a href="<%= user.url %>" class="text-decoration-none">
                     <div class="card" style="width: 18rem;">
@@ -20,5 +23,8 @@
                 </a>
                 <% }) %>
         </div>
+        <% } else { %>
+            <h4 class="text-center">Il n'y a pas de software avec cette id, vérifiez celui-ci</h4>
+         <% } %>
     </div>
     <%- include('../partials/footer.ejs') %>
