--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,40 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UwU Libresoft</title>
 
-    <script>
-      function search(e) {
-        e.preventDefault();
-        const search = new FormData(e.target).get('search');
-        window.location.href = `/?search=${search}`;
-      }
-    </script>
+<head>
+  <meta charset="UTF-8">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>UwU Libresoft</title>
+
+  <script>
+    function search(e) {
+      e.preventDefault();
+      const search = new FormData(e.target).get('search');
+      window.location.href = `/?search=${search}`;
+    }
+  </script>
 </head>
+
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid gap-3">
-              <img src="https://cdn3.emoji.gg/emojis/5844-boykisser.png" width="45" >
-              <a class="navbar-brand" href="/">UwU Libresoft</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/">Softwares</a>
-                  </li>
-                </ul>
-              </div>
-              <form class="d-flex" role="search" onsubmit="search">
-                <input class="form-control me-2" type="search" placeholder="Search" name="search" aria-label="Search" minlength="3" value="<%= typeof search !== 'undefined' ? search : '' %>">
-                <button class="btn btn-outline-success" type="submit">Rechercher</button>
-              </form>
-            </div>
-          </nav>
-    </header>
+  <header>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid gap-3">
+        <img src="https://cdn3.emoji.gg/emojis/5844-boykisser.png" width="45">
+        <a class="navbar-brand" href="/">UwU Libresoft</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/">Softwares</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="d-flex gap-3 align-items-center justify-content-center">
+          <% if (user) { %>
+            <span>
+              <%= user.name %>
+            </span>
+            <a href="/logout" class="btn btn-primary" style="text-decoration: none;">Logout</a>
+            <% } else { %>
+              <a href="/login" class="btn btn-primary" style="text-decoration: none;">Login</a>
+              <% } %>
+        </div>
+
+        <form class="d-flex" role="search" onsubmit="search">
+          <input class="form-control me-2" type="search" placeholder="Search" name="search" aria-label="Search"
+            minlength="3" value="<%= typeof search !== 'undefined' ? search : '' %>">
+          <button class="btn btn-outline-success" type="submit">Rechercher</button>
+        </form>
+      </div>
+    </nav>
+  </header>
