--- a/views/software/software_list.ejs
+++ b/views/software/software_list.ejs
@@ -41,6 +41,9 @@
           <div class="d-flex justify-content-between gap-3 align-items-center">
             <% if (software.lastModified) { %>
              <span><%= software.lastModified.toLocaleString('fr-FR') %></span>
+             <% software.lastContributor.forEach(element => { %>
+              <span><%=element.name %></span>
+             <% }) %>
             <% } %>
           <% if (user) { %>
               <a class="btn btn-outline-primary" href="edit/<%=software.id%>">Editer</a>
