--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -40,10 +40,16 @@
 
         <div class="d-flex gap-3 align-items-center justify-content-center">
           <% if (user) { %>
-            <span>
-              <%= user.name %>
-            </span>
-            <a href="/logout" class="btn btn-primary" style="text-decoration: none;">Logout</a>
+            <div class="dropdown">
+              <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <%= user.name %>
+              </a>
+            
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="/avatar">Avatar</a></li>
+                <li><a class="dropdown-item" href="/logout">Logout</a></li>
+              </ul>
+            </div>
             <% } else { %>
               <a href="/login" class="btn btn-primary" style="text-decoration: none;">Login</a>
               <% } %>
